# math-explanation

./: .env copy.example  .gitignore  README.md  aa.md  config.py  llm_runner.py  main.py  pyproject.toml  requirements.txt  run.bat  run.sh
.cursor/skills/merge-current-to-branch/: SKILL.md
.cursor/skills/merge-current-to-branch/scripts/: merge-to-branch.sh
api/: __init__.py  history_store.py  models.py  pipeline.py  pipeline_checkpoint.py  routes.py  task_store.py
asset_generation/: __init__.py  html_render.py  manim_render.py  sd_placeholder.py  timing.py  tts.py
composition/: __init__.py  audio_concat.py  ffmpeg_compose.py
openspec/changes/archive/2026-02-13-math-explainer-video-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-13-math-explainer-video-pipeline/specs/asset-generation/: spec.md
openspec/changes/archive/2026-02-13-math-explainer-video-pipeline/specs/explainer-api/: spec.md
openspec/specs/asset-generation/: spec.md
openspec/specs/explainer-api/: spec.md
openspec/specs/explainer-web-ui/: spec.md
openspec/specs/multimodal-script/: spec.md
openspec/specs/problem-analysis/: spec.md
openspec/specs/video-composition/: spec.md
problem_analysis/: __init__.py  analyzer.py  formula_verifier.py  image_to_text.py  schemas.py
script_generation/: __init__.py  generator.py  schemas.py
static/: index.html
tests/: __init__.py  test_composition.py  test_html_render.py  test_manim_render.py  test_problem_analysis.py  test_script_generation.py
(+4 files in other folders)
